--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Play with the content security policy and inline styles",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js"
+    "start": "babel-node index.js",
+    "build": "webpack"
   },
   "keywords": [
     "csp",
@@ -14,11 +15,18 @@
   "author": "Craig Bilner",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel": "^6.0.15",
+    "babel-cli": "^6.1.1",
+    "babel-core": "^6.0.20",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
     "koa": "^1.1.1",
     "koa-common": "^1.2.0",
     "koa-hbs": "^0.7.0",
     "radium": "^0.14.3",
     "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "react-dom": "^0.14.2",
+    "webpack": "^1.12.2"
   }
 }
