--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Play with the content security policy and inline styles",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run build && npm start",
     "start": "babel-node index.js",
     "build": "webpack",
     "watch": "webpack --watch"
@@ -13,8 +14,16 @@
     "content-security-policy",
     "inline-styles"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/craigbilner/csplay.git"
+  },
   "author": "Craig Bilner",
   "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/craigbilner/csplay/issues"
+  },
+  "homepage": "https://github.com/craigbilner/csplay#readme",
   "dependencies": {
     "babel": "^6.0.15",
     "babel-cli": "^6.1.1",
